<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/menu_group1">
		<item android:id="@+id/translate" android:title="@string/translate_post"/>
		<item android:id="@+id/pin" android:title="@string/pin_post"/>
		<item android:id="@+id/bookmark" android:title="@string/add_bookmark"/>
		<item android:id="@+id/share" android:title="@string/button_share"/>
		<item android:id="@+id/open_in_browser" android:title="@string/open_in_browser"/>
		<item android:id="@+id/copy_link" android:title="@string/fallback_menu_item_copy_link"/>
		<item android:id="@+id/edit" android:title="@string/edit"/>
		<item android:id="@+id/delete" android:title="@string/delete"/>
		<item android:id="@+id/mute_conversation" android:title="@string/mute_conversation"/>
	</group>
	<group android:id="@+id/menu_group2">
		<item android:id="@+id/add_to_list" android:title="@string/add_user_to_list"/>
		<item android:id="@+id/follow" android:title="@string/follow_user"/>
		<item android:id="@+id/mute" android:title="@string/mute_user"/>
		<item android:id="@+id/block" android:title="@string/block_user"/>
		<item android:id="@+id/report" android:title="@string/report_user"/>
	</group>
</menu>