<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:orderInCategory="1" android:id="@+id/menu_group1">
		<item android:id="@+id/share" android:title="@string/button_share"/>
		<item android:id="@+id/copy_link" android:title="@string/fallback_menu_item_copy_link"/>
		<item android:id="@+id/qr_code" android:title="@string/profile_view_qr_code"/>
		<item android:id="@+id/open_in_browser" android:title="@string/open_in_browser"/>
	</group>
	<group android:orderInCategory="2" android:id="@+id/menu_group2">
		<item android:id="@+id/add_to_list" android:title="@string/add_user_to_list"/>
		<item android:id="@+id/feature" android:title="@string/feature_user"/>
		<item android:id="@+id/personal_note" android:title="@string/add_user_personal_note"/>
	</group>
	<group android:orderInCategory="3" android:id="@+id/menu_group3">
		<item android:id="@+id/hide_boosts" android:title="@string/hide_boosts_from_user"/>
		<item android:id="@+id/mute" android:title="@string/mute_account"/>
	</group>
	<group android:orderInCategory="4" android:id="@+id/menu_group4">
		<item android:id="@+id/remove_follower" android:title="@string/remove_follower"/>
		<item android:id="@+id/block" android:title="@string/block_account"/>
		<item android:id="@+id/block_domain" android:title="@string/block_domain"/>
		<item android:id="@+id/report" android:title="@string/report_account"/>
	</group>
</menu>