<?xml version="1.0" encoding="utf-8"?>
<org.joinmastodon.android.ui.views.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_bottom_sheet"
	android:outlineProvider="background"
	android:elevation="1dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="16dp">

		<View
			android:id="@+id/handle"
			android:layout_width="match_parent"
			android:layout_height="36dp"
			android:background="@drawable/bg_bottom_sheet_handle"/>

		<HorizontalScrollView
			android:id="@+id/buttons_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fillViewport="true">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="64dp"
				android:orientation="horizontal"
				android:paddingHorizontal="16dp"
				android:baselineAligned="false">

				<Button
					android:id="@+id/btn_boost"
					android:layout_width="64dp"
					android:layout_height="64dp"
					android:text="@string/button_reblog"
					android:drawableTop="@drawable/ic_boost"
					style="@style/Widget.Mastodon.M3.Button.IconWithLabel"/>

				<Space
					android:layout_width="0dp"
					android:layout_height="1dp"
					android:layout_weight="1"/>

				<Button
					android:id="@+id/btn_favorite"
					android:layout_width="64dp"
					android:layout_height="64dp"
					android:text="@string/button_favorite"
					android:drawableTop="@drawable/ic_star_24px_selector"
					style="@style/Widget.Mastodon.M3.Button.IconWithLabel"/>

				<Space
					android:layout_width="0dp"
					android:layout_height="1dp"
					android:layout_weight="1"/>

				<Button
					android:id="@+id/btn_share"
					android:layout_width="64dp"
					android:layout_height="64dp"
					android:text="@string/button_share"
					android:drawableTop="@drawable/ic_share_24px"
					style="@style/Widget.Mastodon.M3.Button.IconWithLabel"/>

				<Space
					android:layout_width="0dp"
					android:layout_height="1dp"
					android:layout_weight="1"/>

				<Button
					android:id="@+id/btn_bookmark"
					android:layout_width="64dp"
					android:layout_height="64dp"
					android:text="@string/add_bookmark"
					android:drawableTop="@drawable/ic_bookmark_24px_selector"
					style="@style/Widget.Mastodon.M3.Button.IconWithLabel"/>

				<Space
					android:layout_width="0dp"
					android:layout_height="1dp"
					android:layout_weight="1"/>

				<Button
					android:id="@+id/btn_download"
					android:layout_width="64dp"
					android:layout_height="64dp"
					android:text="@string/download"
					android:drawableTop="@drawable/ic_download_24px"
					style="@style/Widget.Mastodon.M3.Button.IconWithLabel"/>

			</LinearLayout>

		</HorizontalScrollView>
		
		<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginVertical="4dp"
			android:layout_marginHorizontal="16dp"
			android:background="?colorM3OutlineVariant"/>

		<LinearLayout
			android:id="@+id/alt_text_title"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:orientation="horizontal"
			android:layout_marginHorizontal="16dp">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_marginEnd="8dp"
				android:singleLine="true"
				android:ellipsize="end"
				android:textSize="22dp"
				android:textColor="?colorM3OnSurfaceVariant"
				android:gravity="center_vertical|start"
				android:text="@string/alt_text"/>

			<ImageButton
				android:id="@+id/alt_text_help"
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:background="?android:actionBarItemBackground"
				android:tint="?colorM3OnSurfaceVariant"
				android:contentDescription="@string/help"
				android:src="@drawable/ic_help_24px"/>

		</LinearLayout>

		<TextView
			android:id="@+id/alt_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:textAppearance="@style/m3_body_large"
			android:textColor="?colorM3OnSurface"
			tools:text="A cute black cat"/>

	</LinearLayout>

</org.joinmastodon.android.ui.views.CustomScrollView>